fix: Update Modify page layout to improve readability and maintainability

--- a/4-JogoDaForca/jogo-da-forca/src/app/words/modify/page.module.css
+++ b/4-JogoDaForca/jogo-da-forca/src/app/words/modify/page.module.css
@@ -12,9 +12,9 @@
 
 .listSavedWords{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-flow: wrap;
     width: 60%;
     height: 300px;
     margin-top: 20px;
